--- a/page 1.html
+++ b/page 1.html
@@ -33,7 +33,16 @@
 <h5>- A world record for the longest conga dance line was set by 119,986 people in Miami in 1988.</h5>
 <h5>- Dancing has proven to reduce the stress of a persons mind and body</h5>
 <br></br>
-
+<ul class="image-list-small">
+            <li>
+                <div id="iconArrow"><img src="dance pic 1.jpg"></div>
+                <div class="details">
+                <h4><a href="#">Le Walz</a></h4>
+                <p class="image-author">Le Walz, a été fabriqué dans l’Allemagne rurale et était le plus populaire parmi les pauvres avant de devenir un favori de la salle de bal.</p>
+              </div>
+            </li>
+            <li>
+</ul>
 <h3>***Why Dancing is my Favorite Sport***</h3>
 <br></br>
 <h5>Closing statements about why it's your favorite sport</h5>
