--- a/page 1.html
+++ b/page 1.html
@@ -27,6 +27,14 @@
 <h5>***Describe some of the dances***</h5>
 
 <br></br>
+<ul class="image-list-small">
+<li>
+<div id="iconArrow"><img src="dance pic 9.jpg"></div>
+<div class="details">
+</li>
+<li>
+</ul>
+<br></br>
 
 <h3>***Fun Facts About Dancing***</h3>
 <br></br>
@@ -34,11 +42,11 @@
 <h5>- Dancing has proven to reduce the stress of a persons mind and body</h5>
 <br></br>
 <ul class="image-list-small">
-            <li>
-                <div id="iconArrow"><img src="dance pic 1.jpg"></div>
-                <div class="details">
-            </li>
-            <li>
+<li>
+<div id="iconArrow"><img src="dance pic 1.jpg"></div>
+<div class="details">
+</li>
+<li>
 </ul>
 <h3>***Why Dancing is my Favorite Sport***</h3>
 <br></br>
