--- a/page 2.html
+++ b/page 2.html
@@ -28,42 +28,29 @@
 <br></br>
                 <div id="iconArrow"><img src="dance pic 2.jpg"></div>
               <div class="details">
-                <h4><a href="#">Le Walz</a></h4>
-                <p class="image-author">Earnest Leming</p>
-              </div>
-            </li>
-            <li>
-<br></br>
-                <div id="iconArrow"><img src="dance pic 3.jpg"></div>
-                <div class="details">
-                    <h4><a href="#">Le Walz</a></h4>
-                    <p class="image-author">Edward Flint</p>
+                <h4><a href="#">Ballet</a></h4>
+                <p class="image-author">Le style de danse Ballet a été créé vers l'an 1500 en Italie</p>
               </div>
             </li>
             <li>
 <br></br>
                 <div id="iconArrow"><img src="dance pic 4.jpg"></div>
                 <div class="details">
-                    <h4><a href="#">Le Walz</a></h4>
-                    <p class="image-author">Rick Alpine</p>
+                    <h4><a href="#">Breakdance ou Hip-Hop</a></h4>
+                    <p class="image-author">Le break dance est originaire d'Amérique et a été créé à New York à la fin des années 1960 et au début des années 1970, incorporant de manière intéressante des mouvements provenant de diverses sources, notamment les arts martiaux et la gymnastique.
+</p>
               </div>
             </li>
             <li>
 <br></br>
                 <div id="iconArrow"><img src="dance pic 5.jpg"></div>
                 <div class="details">
-                    <h4><a href="#">Le Walz</a></h4>
-                    <p class="image-author">Stacy River</p>
+                    <h4><a href="#">Salsa</a></h4> 
+                    <p class="image-author">La salsa a été principalement développée par les Portoricains et les Cubains vivant à New York à la fin des années 1960 et au début des années 1970. Différentes régions d'Amérique latine et des États-Unis ainsi que des pays des Caraïbes ont leurs propres styles de salsa très distincts, tels que les styles cubain, portoricain, colombien et new-yorkais.</p>
               </div>
             </li>
             <li>
 <br></br>
-                <div id="iconArrow"><img src="dance pic 6.jpg"></div>
-                <div class="details">
-                    <h4><a href="#">Le Walz</a></h4>
-                    <p class="image-author">Frank Stone</p>
-              </div>
-            </li>
         </ul>
 <br></br>
 <br></br>
