--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <br></br>
     <ul>
         
-<h3>À Propos de The Sport</h3>
+<h3>À Propos de Le Sport</h3>
 <br></br>
 <p class=""><a href="page 1.html"><button><strong>À Propos de The Sport</strong></button></a></p>
 <br></br>
