--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         
 <h3>À Propos de Le Sport</h3>
 <br></br>
-<p class=""><a href="page 1.html"><button><strong>À Propos de The Sport</strong></button></a></p>
+<p class=""><a href="page 1.html"><button><strong>À Propos de Le Sport</strong></button></a></p>
 <br></br>
 <h3>Types de Danse</h3>
 <br></br>
