--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <br></br>
     <ul>
         
-<h3>À Propos de Le Sport</h3>
+<h3>À Propos du Sport</h3>
 <br></br>
-<p class=""><a href="page 1.html"><button><strong>À Propos de Le Sport</strong></button></a></p>
+<p class=""><a href="page 1.html"><button><strong>À Propos du Sport</strong></button></a></p>
 <br></br>
 <h3>Types de Danse</h3>
 <br></br>
