--- a/page 1.html
+++ b/page 1.html
@@ -38,8 +38,11 @@
 
 <h3>***Fun Facts About Dancing***</h3>
 <br></br>
-<h5>- A world record for the longest conga dance line was set by 119,986 people in Miami in 1988.</h5>
-<h5>- Dancing has proven to reduce the stress of a persons mind and body</h5>
+<h5>La danse permet de nombreux bienfaits à la santé mentale mais également au physique.
+
+En effet ,dans un premier temps cela permet de réduire le stress et l'anxiété .
+
+La danse permet également de pouvoir entretenir la mémoire ,c'est une sorte d'exercice.Elle améliore la posture,l'équilibre,la souplesse articulaire et la coordination des mains,des pieds et des yeux.</h5>
 <br></br>
 <ul class="image-list-small">
 <li>
