--- a/page 1.html
+++ b/page 1.html
@@ -36,7 +36,7 @@
 </ul>
 <br></br>
 
-<h3>***Fun Facts About Dancing***</h3>
+<h3>Les Bienfaits de la Danse</h3>
 <br></br>
 <h5>La danse permet de nombreux bienfaits à la santé mentale mais également au physique.
 
