--- a/page 1.html
+++ b/page 1.html
@@ -16,8 +16,6 @@
     <br></br>
     <br></br>
     <ul>
-<h3>***Why Dancing is my Favorite Sport***</h3>
-<br></br>
 
 <h3>***A Brief History of Dancing: Topic Ideas***</h3>
 <br></br>
@@ -51,9 +49,11 @@ La danse permet également de pouvoir entretenir la mémoire ,c'est une sorte d'
 </li>
 <li>
 </ul>
-<h3>***Why Dancing is my Favorite Sport***</h3>
+<h3>Pourquoi la Danse est Mon Sport Préféré</h3>
 <br></br>
-<h5>Closing statements about why it's your favorite sport</h5>
+<h5>La danse est mon sport préféré car ,il permet de pouvoir se libérer d'une manière totalement aléatoire.J'ai toujours aimé ce sport j'en fait depuis que j'ai 4 ans ,j'ai arrêter maintenant mais on va dire que je danse toujours chez moi (quand il n'y a personne bien sûr)et je me suis rendu compte que chaque mouvement que je faisais était différent .Mais c'est pas grave car le plus important dans la danse c'est de pouvoir se représenter soi même avec le type de danse qui nous correspond.
+
+Avec les différents types de danse, je pense que chacun d'entre nous peut se définir et qu'un simple geste ou mouvement peut aboutir à une chorégraphie magnifique .Que ce soit de la danse classique du Hip-hop ,de la danse de salon et j'en passe.L'important c'est de se trouver.</h5>
 <br></br>
 <br></br>
 
