--- a/page 2.html
+++ b/page 2.html
@@ -21,7 +21,7 @@
                 <div id="iconArrow"><img src="dance pic 1.jpg"></div>
                 <div class="details">
                 <h4><a href="#">Le Walz</a></h4>
-                <p class="image-author">(I correct you)Le Walz a été crée en Allemagne rurale et était la danse la plus populaire parmi les pauvres avant de devenir la danse favorite de la salle de bal. </p>
+                <p class="image-author">Le Walz a été crée en Allemagne rurale et était la danse la plus populaire parmi les pauvres avant de devenir la danse favorite de la salle de bal. </p>
               </div>
             </li>
             <li>
