--- a/about me.html
+++ b/about me.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>À Propos de Moi</title>
+    <title>Un Peu Sur Moi</title>
 
 </head>
 <body>
@@ -20,18 +20,69 @@
     <ul>
         <div id="iconArrow"><img src="Author pic.png"></div>
         <br></br>
-<h3>A Little About Myself ***Suggestions***</h3>   
+<h3>Un Peu Sur Moi</h3>   
 <br></br>
-<h5>- Your Favorite Color</h5>
-<h5>- Your Favorite Food</h5>
-<h5>- Your Favorite Thing to do</h5>
+<h5>1-J'adore manger du salé le matin.
+
+2-Je dors avec une couette en été même si il fait 30°c.
+
+3-J'adore l'odeur des livres et de la peinture.
+
+4-Je peux retenir une chanson inconsciemment mais j'arrive pas à retenir une leçon.
+
+5-J'aime pas le rap.
+
+6-L'ice tea c'est meilleure que le Coca.
+
+7-Parfois je parle avec des voix bizarres .
+
+8-Je préfère parler avec des adultes qu'avec des personnes de mon âge.
+
+9-Quand je sens l'odeur de l'alcool j'ai envie de vomir.
+
+10-Je préfère parler avec des vocaux que des textos. 
+
+11-les sciences c'est nul.
+
+12-Quand j'étais petite j'adorais me battre.
+
+13-Je communique dans un autre langage avec mes amis.
+
+14-Je rigole dans les moments où normalement il ne faut pas rire.
+
+15-Pour moi la nourriture c'est sacré.</h5>
 <br></br>
 <div id="iconArrow"><img src="baby yoda.jpg"></div>
 <br></br>
-<h5>- Hobbies</h5>
-<h5>- Your Favorite Movie</h5>
-<h5>- What You Want to Be When You're Older</h5>
-<h5>- A Few Fun Facts About Yourself</h5>
+<h5>16-J'aime bien les serpents.
+
+17-Je peux facilement m'endormir partout et en très peu de temps.
+
+18-J'aime bien la nourriture de la cantine.
+
+19-Je possède une collection de chaussettes très voyante (Il ne faut mieux pas être épiléptique ).
+
+20-Je possède également une collection de boucles d'oreilles bizarres.
+
+21-J'adore les chats noirs.
+
+22-Je déteste l'odeur de la cigarette.
+
+23-Mcdo n'est pas le meilleur fast-food.
+
+24-Je suis toujours malade en hiver ,en automne ,au printemps et en été.
+
+25-Je détéste dormir dans le noir complet.
+
+26-Star Wars c'est meilleur que Harry Potter.
+
+27-Les films sont meilleurs que les séries.
+
+28-J'ai jamais voyagé hors de l'Europe.
+
+29-J'aime pas l'eau gazeuse.
+
+30-J'aime pas les jeux vidéos. </h5>
 <br></br>
 <br></br>
 <h3>Page D’accueil</h3>
