--- a/about me.html
+++ b/about me.html
@@ -14,7 +14,7 @@
     <br></br>
     <br></br>
     <br></br>
-    <h1>***Title***</h1>
+    <h1>A Propos de L'auteur</h1>
     <br></br>
     <br></br>
     <ul>
