--- a/about me.html
+++ b/about me.html
@@ -20,7 +20,7 @@
     <ul>
         <div id="iconArrow"><img src="Author pic.png"></div>
         <br></br>
-<h3>Un Peu Sur Moi</h3>   
+<h3>Sur cette page, je vais vous présenter 30 choses bizarres à propos de moi que je fais ou que je pense:</h3>   
 <br></br>
 <h5>1-J'adore manger du salé le matin.
 
