--- a/page 1.html
+++ b/page 1.html
@@ -21,9 +21,9 @@
 <br></br>
 <h5>La danse permet de nombreux bienfaits à la santé mentale mais également au physique.
 
-En effet ,dans un premier temps cela permet de réduire le stress et l'anxiété .
+En effet, dans un premier temps cela permet de réduire le stress et l'anxiété .
 
-La danse permet également de pouvoir entretenir la mémoire ,c'est une sorte d'exercice.Elle améliore la posture,l'équilibre,la souplesse articulaire et la coordination des mains,des pieds et des yeux.</h5>
+La danse permet également de pouvoir entretenir la mémoire, c'est une sorte d'exercice. Elle améliore la posture, l'équilibre, la souplesse articulaire et la coordination des mains, des pieds et des yeux.</h5>
 <br></br>
 <ul class="image-list-small">
 <li>
@@ -42,9 +42,9 @@ La danse permet également de pouvoir entretenir la mémoire ,c'est une sorte d'
 </ul>
 <h3>Pourquoi la Danse est Mon Sport Préféré</h3>
 <br></br>
-<h5>La danse est mon sport préféré car ,il permet de pouvoir se libérer d'une manière totalement aléatoire.J'ai toujours aimé ce sport j'en fait depuis que j'ai 4 ans ,j'ai arrêter maintenant mais on va dire que je danse toujours chez moi (quand il n'y a personne bien sûr)et je me suis rendu compte que chaque mouvement que je faisais était différent .Mais c'est pas grave car le plus important dans la danse c'est de pouvoir se représenter soi même avec le type de danse qui nous correspond.
+<h5>La danse est mon sport préféré car, il permet de pouvoir se libérer d'une manière totalement aléatoire. J'ai toujours aimé ce sport j'en fait depuis que j'ai 4 ans, j'ai arrêter maintenant mais on va dire que je danse toujours chez moi (quand il n'y a personne bien sûr) et je me suis rendue compte que chaque mouvement que je faisait étaient differents. Mais c'est pas grave car le plus important dans la danse c'est de pouvoir se représenter soi même avec le type de danse qui nous correspond.
 
-Avec les différents types de danse, je pense que chacun d'entre nous peut se définir et qu'un simple geste ou mouvement peut aboutir à une chorégraphie magnifique .Que ce soit de la danse classique du Hip-hop ,de la danse de salon et j'en passe.L'important c'est de se trouver.</h5>
+Avec les différents types de danse, je pense que chacun d'entre nous peut se définir et qu'un simple geste ou mouvement peut aboutir à une chorégraphie magnifique. Que ce soit de la danse classique du Hip-hop, de la danse de salon et j'en passe. L'important c'est de se trouver.</h5>
 <br></br>
 <br></br>
 
