--- a/about me.html
+++ b/about me.html
@@ -22,67 +22,67 @@
         <br></br>
 <h3>Sur cette page, je vais vous présenter 30 choses bizarres à propos de moi que je fais ou que je pense:</h3>   
 <br></br>
-<h5>1-J'adore manger du salé le matin.
+<h5>1 - J'adore manger du salé le matin.
 
-2-Je dors avec une couette en été même si il fait 30°c.
+2 - Je dors avec une couette en été même si il fait 30°c.
 
-3-J'adore l'odeur des livres et de la peinture.
+3 - J'adore l'odeur des livres et de la peinture.
 
-4-Je peux retenir une chanson inconsciemment mais j'arrive pas à retenir une leçon.
+4 - Je peux retenir une chanson inconsciemment mais j'arrive pas à retenir une leçon.
 
-5-J'aime pas le rap.
+5 - J'aime pas le rap.
 
-6-L'ice tea c'est meilleure que le Coca.
+6 - L'ice tea c'est meilleure que le Coca.
 
-7-Parfois je parle avec des voix bizarres .
+7 - Parfois je parle avec des voix bizarres .
 
-8-Je préfère parler avec des adultes qu'avec des personnes de mon âge.
+8 - Je préfère parler avec des adultes qu'avec des personnes de mon âge.
 
-9-Quand je sens l'odeur de l'alcool j'ai envie de vomir.
+9 - Quand je sens l'odeur de l'alcool j'ai envie de vomir.
 
-10-Je préfère parler avec des vocaux que des textos. 
+10 - Je préfère parler avec des vocaux que des textos. 
 
-11-les sciences c'est nul.
+11 - Les sciences c'est nul.
 
-12-Quand j'étais petite j'adorais me battre.
+12 - Quand j'étais petite j'adorais me battre.
 
-13-Je communique dans un autre langage avec mes amis.
+13 - Je communique dans un autre langage avec mes amis.
 
-14-Je rigole dans les moments où normalement il ne faut pas rire.
+14 - Je rigole dans les moments où normalement il ne faut pas rire.
 
-15-Pour moi la nourriture c'est sacré.</h5>
+15 - Pour moi la nourriture c'est sacré.</h5>
 <br></br>
 <div id="iconArrow"><img src="baby yoda.jpg"></div>
 <br></br>
-<h5>16-J'aime bien les serpents.
+<h5>16 - J'aime bien les serpents.
 
-17-Je peux facilement m'endormir partout et en très peu de temps.
+17 - Je peux facilement m'endormir partout et en très peu de temps.
 
-18-J'aime bien la nourriture de la cantine.
+18 - J'aime bien la nourriture de la cantine.
 
-19-Je possède une collection de chaussettes très voyante (Il ne faut mieux pas être épiléptique ).
+19 - Je possède une collection de chaussettes très voyante (Il ne faut mieux pas être épiléptique ).
 
-20-Je possède également une collection de boucles d'oreilles bizarres.
+20 - Je possède également une collection de boucles d'oreilles bizarres.
 
-21-J'adore les chats noirs.
+21 - J'adore les chats noirs.
 
-22-Je déteste l'odeur de la cigarette.
+22 - Je déteste l'odeur de la cigarette.
 
-23-Mcdo n'est pas le meilleur fast-food.
+23 - Mcdo n'est pas le meilleur fast-food.
 
-24-Je suis toujours malade en hiver ,en automne ,au printemps et en été.
+24 - Je suis toujours malade en hiver ,en automne ,au printemps et en été.
 
-25-Je détéste dormir dans le noir complet.
+25 - Je détéste dormir dans le noir complet.
 
-26-Star Wars c'est meilleur que Harry Potter.
+26 - Star Wars c'est meilleur que Harry Potter.
 
-27-Les films sont meilleurs que les séries.
+27 - Les films sont meilleurs que les séries.
 
-28-J'ai jamais voyagé hors de l'Europe.
+28 - J'ai jamais voyagé hors de l'Europe.
 
-29-J'aime pas l'eau gazeuse.
+29 - J'aime pas l'eau gazeuse.
 
-30-J'aime pas les jeux vidéos. </h5>
+30 - J'aime pas les jeux vidéos. </h5>
 <br></br>
 <br></br>
 <h3>Page D’accueil</h3>
